--- a/Vino.Web/Dockerfile
+++ b/Vino.Web/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["BetterThanYou.Web/BetterThanYou.Web.csproj", "BetterThanYou.Web/"]
-RUN dotnet restore "BetterThanYou.Web/BetterThanYou.Web.csproj"
+COPY ["Vino.Web/Vino.Web.csproj", "Vino.Web/"]
+RUN dotnet restore "Vino.Web/Vino.Web.csproj"
 COPY . .
-WORKDIR "/src/BetterThanYou.Web"
-RUN dotnet build "BetterThanYou.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Vino.Web"
+RUN dotnet build "Vino.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "BetterThanYou.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Vino.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "BetterThanYou.Web.dll"]
+ENTRYPOINT ["dotnet", "Vino.Web.dll"]
