--- a/Vino.Web/Vino.Web.csproj
+++ b/Vino.Web/Vino.Web.csproj
@@ -11,13 +11,14 @@
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Autofac" Version="8.1.0" />
+        <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
         <PackageReference Include="Ardalis.ApiEndpoints" Version="4.*" />
         <PackageReference Include="Ardalis.Result" Version="7.*" />
         <PackageReference Include="Ardalis.Result.AspNetCore" Version="7.*" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.*" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
